# a2GoAT

./: .gitignore  CMakeLists.txt  README.md
cmake/: Doxyfile.in  doxygen.cmake  patch-doxygen-qhp-file.sh  settings.cmake
cmake/Modules/: FindROOT.cmake  FindROOTHelpers.cmake
configfiles/cuts/: CB_DeltaE-E_Proton.root  TAPS_DeltaE-E.root
cuts/: CB_DeltaE-E_Pion.root
documents/: goat.man
inc/: GAcquTree.h  GAcquTreeManager.h  GConfig.h  GConfigFile.h  GCorrectScalers.h  GCut.h  GCutTime.h  GDataChecks.h  GFitEtap6g.h  GH1.h  GH1Example.h  GHist.h  GHistBGSub.h  GHistCut.h  GHistFile.h  GHistManager.h  GHistParticle.h  GHistScaCor.h  GHistTaggedMeson.h  GHistTaggedParticle.h  GHistTaggerBinning.h  GInputTreeManager.h  GKinFitter.h  GKinFitterParticle.h  GMesonReconstruction.h  GParticle.h  GParticleReconstruction.h  GParticleReconstruction2UnchargedHits.h  GParticleTree.h  GPlot.h  GPlotCut.h  GPlotCutMC.h  GPlotEnergyBins.h  GPlotInvMass.h  GPlotMCCal.h  GPlotProton.h  GPlotScalers.h  GPlotTagger.h  GPlotTime.h  GProtonReconstruction.h  (+33 more)
macros/: Compton_results.C  Pi0_results.C  SimulationCompare.C
manual/: GoAT_manual.tex
scripts/: GoATFarm  GoATNode  GoATSubmit
src/: AutoDict_GParticle.cxx  AutoDict_GParticle_cxx.d  GAcquTree.cc  GAcquTreeManager.cc  GConfigFile.cc  GCorrectScalers.cc  GCut.cc  GCutTime.cc  GDataChecks.cc  GFitEtap6g.cc  GH1.cc  GH1Example.cc  GH1_example_main.cc  GHist.cc  GHistBGSub.cc  GHistCut.cc  GHistFile.cc  GHistManager.cc  GHistParticle.cc  GHistScaCor.cc  GHistTaggedMeson.cc  GHistTaggedParticle.cc  GHistTaggerBinning.cc  GInputTreeManager.cc  GKinFitter.cc  GKinFitterParticle.cc  GMesonReconstruction.cc  GParticle.cc  GParticleReconstruction.cc  GParticleReconstruction2UnchargedHits.cc  GParticleTree.cc  GPlot.cc  GPlotCut.cc  GPlotCutMC.cc  GPlotEnergyBins.cc  GPlotInvMass.cc  GPlotProton.cc  GPlotScalers.cc  GPlotTagger.cc  GPlotTime.cc  (+51 more)
